--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,9 +24,9 @@
                     </div>
                     <div class="col-sm-2">
                         <ul>
-                            <li><a href="{{site.url}}blog/">Blog</a></li>
-                            <li><a href="{{site.url}}help/">Help</a></li>
-                            <li><a href="{{site.url}}docs/">API Docs</a></li>
+                            <li><a href="/blog/">Blog</a></li>
+                            <li><a href="/help/">Help</a></li>
+                            <li><a href="/docs/">API Docs</a></li>
                         </ul>
                     </div>
                     <div class="col-sm-3">
@@ -38,7 +38,6 @@
                     </div>
                 </div>
             </div>
-            <!-- <p>Created  &bull; <a href="https://groups.google.com/d/forum/opencommunitymaps">Join our mailing list</a> &bull; <a href="https://github.com/ExCiteS/opencommunitymaps">Contribute on Github</a></p>  -->
         </footer>
     </body>
 </html>
