--- a/css/main.scss
+++ b/css/main.scss
@@ -80,7 +80,7 @@ header {
         font-family: $font-stack;
         font-size: 14px;
         line-height: 1;
-        padding: ($margin / 2) 0;
+        padding: $margin 0;
         text-transform: none;
         letter-spacing: 0;
         margin: 0 auto $gutter-width auto;
