--- a/css/main.scss
+++ b/css/main.scss
@@ -122,28 +122,26 @@ header {
     }
 
     h1 {
-        margin: 0;
+        margin: 0 0 ($margin / 2) 0;
         font-size: 40px;
         font-family: Futura, "Trebuchet MS", Arial, sans-serif;
         text-transform: uppercase;
         letter-spacing: 2px;
+        line-height: 1;
     }
 
     p {
         margin: 0;
-        font-size: 20px;
+        font-size: 25px;
         line-height: 1.4;
+        line-height: 1;
+        text-transform: uppercase;
     }
 
     &.main {
         background: url(../img/people.jpg) no-repeat 50% 100%;
         background-size: cover;
         padding-bottom: $margin;
-
-        p {
-            font-size: 25px;
-            text-transform: uppercase;
-        }
 
         div.hero {
             text-shadow: 0 0 10px #000000;
