--- a/css/main.scss
+++ b/css/main.scss
@@ -65,6 +65,10 @@ header {
     background-color: $color-link;
     padding-bottom: $margin * 4;
 
+    .row > div {
+        margin-bottom: 0;
+    }
+
     a.brand {
         color: #fff;
         font-family: Futura, "Trebuchet MS", Arial, sans-serif;
@@ -83,7 +87,8 @@ header {
         padding: $margin 0;
         text-transform: none;
         letter-spacing: 0;
-        margin: 0 auto $gutter-width auto;
+        margin: 0 auto ($margin * 4) auto;
+        background-color: rgba(0, 0, 0, 0.5);
 
         ul {
             padding: 0;
@@ -139,28 +144,19 @@ header {
     }
 
     &.main {
-        background: url(../img/people.jpg) no-repeat 50% 100%;
+        background: url(../img/header.jpg) no-repeat 50% 100%;
         background-size: cover;
         padding-bottom: $margin;
 
         div.hero {
             text-shadow: 0 0 10px #000000;
         }
-
-        nav {
-            background-color: rgba(0, 0, 0, 0.5);
-        }
     }
 
 
     @media screen and (min-width: $break-small) {
-
         &.main {
             padding-bottom: $margin * 4;
-
-            div.hero {
-                margin-top: $margin * 4;
-            }
 
             h1 {
                 font-size: 50px;
