--- a/css/main.scss
+++ b/css/main.scss
@@ -213,10 +213,6 @@ a {
     }
 }
 
-img {
-    max-width: 100%;
-}
-
 .btn {
     text-align: center;
     border: 0;
@@ -246,6 +242,7 @@ img {
     -webkit-box-shadow: 1px 1px 5px 3px rgba(0,0,0,0.2);
     -moz-box-shadow: 1px 1px 5px 3px rgba(0,0,0,0.2);
     box-shadow: 1px 1px 5px 3px rgba(0,0,0,0.2);
+    max-width: 100%;
 }
 
 .centered {
@@ -394,6 +391,18 @@ footer {
         padding: 0;
         margin: 0;
         list-style: none;
+    }
+}
+
+#where-to-go {
+    img {
+        -webkit-box-shadow: none;
+        -moz-box-shadow: none;
+        box-shadow: none;
+    }
+
+    .col-sm-6 {
+        text-align: center;
     }
 }
 
