Added media to documentation

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,9 +31,9 @@
                     </div>
                     <div class="col-sm-4">
                         <ul>
-                            <li><a href="https://github.com/ExCiteS/opencommunitymaps">View project on Github</a></li>
-                            <li><a href="https://github.com/ExCiteS/opencommunitymaps/issues/new">Report an Issue</a></li>
-                            <li><a href="https://groups.google.com/d/forum/opencommunitymaps">Mailing List</a></li>
+                            <li><a href="https://github.com/ExCiteS/geokey">View project on Github</a></li>
+                            <li><a href="https://github.com/ExCiteS/geokey/issues/new">Report an Issue</a></li>
+                            <li><a href="https://groups.google.com/d/forum/geokey">Mailing List</a></li>
                         </ul>
                     </div>
                 </div>
