Front-page redesign

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
         <!-- Custom CSS -->
         <link rel="stylesheet" href="/build/css/octicons/octicons.css">
         <link rel="stylesheet" href="/build/css/bootstrap.min.css">
+        <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
         <link rel="stylesheet" href="/build/css/global.css">
         <link rel="stylesheet" href="/build/css/syntax.css">
 
@@ -31,9 +32,8 @@
                     </div>
                     <div class="col-sm-4">
                         <ul>
-                            <li><a href="https://github.com/ExCiteS/geokey">View project on Github</a></li>
-                            <li><a href="https://github.com/ExCiteS/geokey/issues/new">Report an Issue</a></li>
-                            <li><a href="https://groups.google.com/d/forum/geokey">Mailing List</a></li>
+                            <li><a href="https://github.com/ExCiteS/geokey"><i class="fa fa-github fa-fw fa-2x"></i>View project on Github</a></li>
+                            <li><a href="https://twitter.com/geokey_project"><i class="fa fa-twitter fa-fw fa-2x"></i>Follow us on Twitter</a></li>
                         </ul>
                     </div>
                 </div>
