--- a/css/main.scss
+++ b/css/main.scss
@@ -1,5 +1,6 @@
 $break-small: 768px;
 $break-large: 992px;
+$break-xlarge: 1200px;
 
 $font-stack: 'Open Sans', sans-serif;
 
@@ -48,6 +49,7 @@ body {
     font-weight: 400;
     padding: 0;
     margin: 0;
+    -webkit-font-smoothing: subpixel-antialiased;
 }
 
 div.row > div {
@@ -129,42 +131,35 @@ header {
     h1 {
         margin: 0 0 ($margin / 2) 0;
         font-size: 40px;
-        font-family: Futura, "Trebuchet MS", Arial, sans-serif;
-        text-transform: uppercase;
-        letter-spacing: 2px;
+        font-weight: 600;
         line-height: 1;
     }
 
     p {
         margin: 0;
         font-size: 25px;
-        line-height: 1.4;
-        line-height: 1;
-        text-transform: uppercase;
+        line-height: 1.3;
+        font-weight: 200;
     }
 
     &.main {
         background: url(../img/header.jpg) no-repeat 50% 100%;
         background-size: cover;
-        padding-bottom: $margin;
+
+        h1 {
+            text-align: center;
+        }
+
+        p {
+            text-align: center;
+        }
 
         div.hero {
+            @media screen and (min-width: $break-small) {
+                padding: $margin * 6;
+            }
+
             text-shadow: 0 0 10px #000000;
-        }
-    }
-
-
-    @media screen and (min-width: $break-small) {
-        &.main {
-            padding-bottom: $margin * 4;
-
-            h1 {
-                font-size: 50px;
-            }
-
-            p {
-                font-size: 30px;
-            }
         }
     }
 }
@@ -367,6 +362,8 @@ section#about {
     }
 }
 
+.fa {vertical-align: middle;}
+
 footer {
     background-color: $color-primary;
     color: lighten($color-primary, 70%);
@@ -381,6 +378,7 @@ footer {
     a:active, {
         color: lighten($color-primary, 50%);
         text-decoration: none;
+        line-height: 21px;
     }
 
     a:hover {
@@ -394,17 +392,53 @@ footer {
     }
 }
 
-#where-to-go {
-    img {
-        -webkit-box-shadow: none;
-        -moz-box-shadow: none;
-        box-shadow: none;
+#communities {
+    background: url(../img/map2.gif) no-repeat 0 85px;
+
+    @media screen and (max-width: $break-small) {
+        background-position: 50% 0;
+        padding-top: 250px;
     }
 
-    .col-sm-6 {
-        text-align: center;
+    @media screen and (min-width: $break-small) and (max-width: $break-large) {
+        background-size: 230px auto;
+    }
+
+    @media screen and (min-width: $break-xlarge) {
+        background-position: 150px 85px;
     }
 }
+
+#developers {
+    margin-top: $margin * 4;
+    background: url(../img/code.gif) no-repeat 630px 85px;
+
+    @media screen and (max-width: $break-small) {
+        background-position: 50% 0;
+        padding-top: 250px;
+    }
+
+    @media screen and (min-width: $break-small) and (max-width: $break-large) {
+        background-size: 230px auto;
+        background-position: 500px 85px;
+    }
+
+    @media screen and (min-width: $break-xlarge) {
+        background: url(../img/code.gif) no-repeat 680px 85px;
+    }
+}
+
+ul.features {
+    list-style-type: none;
+    margin: 0 0 ($margin * 2) 0;
+    padding: 0;
+    font-size: 18px;
+
+    li {
+        margin-bottom: 15px;
+    }
+}
+
 
 ul.tutorial-links {
     list-style-type: none;
