Changed colour scheme and front page layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width">
 
         <!-- Custom CSS -->
+        <link href='http://fonts.googleapis.com/css?family=Lato:400,700,900' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="/build/css/octicons/octicons.css">
         <link rel="stylesheet" href="/build/css/bootstrap.min.css">
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
