--- a/css/main.scss
+++ b/css/main.scss
@@ -12,6 +12,28 @@ $dark-blue: #2C3E50;
 $color-link: #4B77BE;
 $color-linkvisited: darken($color-link, 10%);
 
+@font-face {
+    font-family: 'Lato';
+    src: url('fonts/Lato-Regular.eot'); /* IE9 Compat Modes */
+    src: url('fonts/Lato-Regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('fonts/Lato-Regular.woff') format('woff'), /* Modern Browsers */
+    url('fonts/Lato-Regular.ttf') format('truetype');
+    font-style: normal;
+    font-weight: normal;
+    text-rendering: optimizeLegibility;
+}
+
+@font-face {
+    font-family: 'Lato';
+    src: url('fonts/Lato-Bold.eot'); /* IE9 Compat Modes */
+    src: url('fonts/Lato-Bold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('fonts/Lato-Bold.woff') format('woff'), /* Modern Browsers */
+    url('fonts/Lato-Bold.ttf') format('truetype');
+    font-style: normal;
+    font-weight: bold;
+    text-rendering: optimizeLegibility;
+}
+
 @mixin clear-float() {
     &:after {
         content: "";
@@ -41,13 +63,13 @@ $color-linkvisited: darken($color-link, 10%);
     }
 }
 
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700);
+@import "syntax";
 
 body {
     font: 18px/1.5 $font-stack;
     background-color: #fff;
     color: $color-primary;
-    font-weight: 400;
+    font-weight: normal;
     padding: 0;
     margin: 0;
     -webkit-font-smoothing: subpixel-antialiased;
@@ -135,7 +157,7 @@ header {
     h1 {
         margin: 0 0 ($margin / 2) 0;
         font-size: 40px;
-        font-weight: 600;
+        font-weight: bold;
         line-height: 1;
     }
 
@@ -143,7 +165,7 @@ header {
         margin: 0;
         font-size: 25px;
         line-height: 1.3;
-        font-weight: 200;
+        font-weight: normal;
     }
 
     &.main {
@@ -169,7 +191,7 @@ header {
 }
 
 h2 {
-    font-weight: 500;
+    font-weight: normal;
     font-size: 1.7em;
     line-height: 1.2;
 
