--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,8 @@
 <nav>
     <div class="container">
         <a href="/" class="brand">GeoKey</a>
-        <ul role="nav">
+        <button id="burger"><i class="fa fa-bars fa-lg"></i></button>
+        <ul role="nav" id="nav">
             <li id="nav-communities"><a href="/communities/">Communities</a></li>
             <li id="nav-developers"><a href="/developers/">Developers</a></li>
             <li id="nav-blog"><a href="/blog/">Blog</a></li>
