--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="/build/css/bootstrap.min.css">
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
         <link rel="stylesheet" href="/build/css/global.css">
-        <script src="build/js/nav.js"></script>
+        <script src="/build/js/nav.js"></script>
     </head>
     <body>
         {{ content }}
