--- a/css/main.scss
+++ b/css/main.scss
@@ -73,6 +73,8 @@ body {
     padding: 0;
     margin: 0;
     -webkit-font-smoothing: subpixel-antialiased;
+    position:relative;
+    overflow:hidden;
 }
 
 div.row > div {
@@ -150,16 +152,16 @@ header {
             }
 
             @media screen and (max-width: $break-small) {
-                @include transition(width, 0.3s, ease);
+                @include transition(right, 0.3s, ease);
                 position: absolute;
                 top: 51px;
-                right: 0;
-                width: 0;
+                right: -9999px;
+                width: 100%;
                 background-color: rgba(0, 0, 0, 0.7);
                 z-index: 999;
 
                 &.active {
-                    width: 100%;
+                    right: 0;
                 }
 
                 li {
