change nav open and close

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
         <script src="/build/js/nav.js"></script>
     </head>
     <body>
+        <div class="wrapper">
         {{ content }}
 
         <footer>
@@ -38,6 +39,7 @@
                 </div>
             </div>
         </footer>
+        </div>
     </body>
 
     {% include tracker.html %}
