--- a/css/main.scss
+++ b/css/main.scss
@@ -73,6 +73,9 @@ body {
     padding: 0;
     margin: 0;
     -webkit-font-smoothing: subpixel-antialiased;
+}
+
+.wrapper{
     position:relative;
     overflow:hidden;
 }
