--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -6,9 +6,8 @@ layout: default
     {% include nav.html %}
     <div class="container">
         <div class="row">
-            <div class="col-sm-8">
-                <h1>Blog</h1>
-                <p>Read about what we've been up to recently</p>
+            <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
+                <h1>{{ page.title }}</h1>
             </div>
         </div>
     </div>
