--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -6,8 +6,8 @@ layout: default
     {% include nav.html %}
     <div class="container">
         <div class="row">
-            <div class="col-sm-8">
-                <h1>API docs</h1>
+            <div class="col-sm-12 col-md-10 col-md-offset-1">
+                <h1>{{ page.title }}</h1>
             </div>
         </div>
     </div>
@@ -16,8 +16,7 @@ layout: default
 <section>
     <div class="container">
         <article class="row tutorial">
-            <div class="col-sm-10">
-                <h2>{{ page.title }}</h2>
+            <div class="col-sm-12 col-md-10 col-md-offset-1">
                 {{ content }}
             </div>
         </article>
