--- a/_layouts/tutorial.html
+++ b/_layouts/tutorial.html
@@ -6,8 +6,8 @@ layout: default
     {% include nav.html %}
     <div class="container">
         <div class="row">
-            <div class="col-sm-8">
-                <h1>Help</h1>
+            <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
+                <h1>{{ page.title }}</h1>
             </div>
         </div>
     </div>
@@ -17,7 +17,6 @@ layout: default
     <div class="container">
         <article class="row tutorial">
             <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
-                <h2>{{ page.title }}</h2>
                 {{ content }}
             </div>
         </article>
