--- a/css/main.scss
+++ b/css/main.scss
@@ -217,7 +217,7 @@ header {
     }
 
     p {
-        margin: 0;
+        margin: ($margin / 2) 0 0 0;
         font-size: 25px;
         line-height: 1.3;
         font-weight: normal;
@@ -241,6 +241,19 @@ header {
             }
 
             text-shadow: 0 0 10px #000000;
+
+            .btn {
+                border-color: #fff;
+
+                &:link,
+                &:visited {
+                    color: #fff;
+                }
+
+                &:hover {
+                    background-color: rgba(255, 255, 255, 0.2)
+                }
+            }
         }
     }
 }
