--- a/css/main.scss
+++ b/css/main.scss
@@ -361,10 +361,13 @@ a {
 }
 
 img {
-    -webkit-box-shadow: 1px 1px 5px 3px rgba(0,0,0,0.2);
-    -moz-box-shadow: 1px 1px 5px 3px rgba(0,0,0,0.2);
-    box-shadow: 1px 1px 5px 3px rgba(0,0,0,0.2);
+    // -webkit-box-shadow: 1px 1px 5px 3px rgba(0,0,0,0.2);
+    // -moz-box-shadow: 1px 1px 5px 3px rgba(0,0,0,0.2);
+    // box-shadow: 1px 1px 5px 3px rgba(0,0,0,0.2);
     max-width: 100%;
+    text-align: center;
+    display: block;
+    margin: 0 auto;
 }
 
 #about img {
