--- a/css/main.scss
+++ b/css/main.scss
@@ -263,7 +263,7 @@ h2 {
     font-size: 1.7em;
     line-height: 1.2;
 
-    span {
+    span, i {
         text-transform: uppercase;
         display: block !important;
         font-size: 12px;
@@ -375,6 +375,7 @@ img {
     -moz-box-shadow: none;
     box-shadow: none;
     margin-right: 15px;
+    display: inline-block;
 }
 
 .centered {
