--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,7 +3,7 @@
         <a href="/" class="brand">GeoKey</a>
         <button id="burger"><i class="fa fa-bars fa-lg"></i></button>
         <ul role="nav" id="nav">
-            <li id="nav-communities"><a href="/communities/">Communities</a></li>
+            <li id="nav-collect"><a href="/collect/">Collect</a></li>
             <li id="nav-developers"><a href="/developers/">Developers</a></li>
             <li id="nav-blog"><a href="/blog/">Blog</a></li>
             <li id="nav-help"><a href="/help/">Help</a></li>
