--- a/css/main.scss
+++ b/css/main.scss
@@ -375,31 +375,39 @@ img {
     display: inline-block;
 }
 
+section.apps {
+    padding-bottom: 0;
+}
+
 .collect-app {
     padding: 45px 0;
     border-top: 1px solid lighten($color-primary, 75%);
     position: relative;
     overflow: hidden;
 
+    .illustration {
+        @media screen and (min-width: $break-small) {
+            position: absolute;
+            top: 100px;
+            left: 50%;
+            width: 1000px;
+            margin-left: 15px;
+            img {
+                display: inline;
+            }
+        }
+    }
+
     &:first-child {
+        .illustration {
+            top: 50px;
+        }
         border-top: none;
         padding-top: 0;
     }
 
     &:last-child {
-        padding-bottom: 0;
-    }
-}
-
-.illustration {
-    @media screen and (min-width: $break-small) {
-        position: absolute;
-        top: 50px;
-        left: 50%;
-        width: 1000px;
-        img {
-            display: inline;
-        }
+        padding-bottom: 45px;
     }
 }
 
