--- a/css/main.scss
+++ b/css/main.scss
@@ -344,7 +344,7 @@ img {
     max-width: 100%;
     text-align: center;
     display: block;
-    margin: 0 auto;
+    margin: 0 auto 15px auto;
 }
 
 #about img {
