--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -7,7 +7,7 @@
             <li id="nav-developers"><a href="/developers/">Developers</a></li>
             <li id="nav-blog"><a href="/blog/">Blog</a></li>
             <li id="nav-help"><a href="/help/">Help</a></li>
-            <li id="nav-docs"><a href="/docs/">API Docs</a></li>
+            <li id="nav-docs"><a href="/docs/">Docs</a></li>
         </ul>
     </div>
 </nav>
