--- a/_includes/internal-nav.html
+++ b/_includes/internal-nav.html
@@ -1,12 +1,12 @@
 <ul>
-    <li><a href="/docs/internal/project.html">Project</a></li>
-    <li><a href="/docs/internal/category.html">Category</a></li>
-    <li><a href="/docs/internal/field.html">Field</a></li>
-    <li><a href="/docs/internal/lookupvalue.html">LookupValue</a></li>
-    <li><a href="/docs/internal/location.html">Location</a></li>
-    <li><a href="/docs/internal/observation.html">Observation</a></li>
-    <li><a href="/docs/internal/comment.html">Comment</a></li>
-    <li><a href="/docs/internal/media-file.html">MediaFile</a></li>
-    <li><a href="/docs/internal/data-grouping.html">Grouping</a></li>
-    <li><a href="/docs/internal/user.html">User</a></li>
+    <li><a href="/docs/programming/project.html">Project</a></li>
+    <li><a href="/docs/programming/category.html">Category</a></li>
+    <li><a href="/docs/programming/field.html">Field</a></li>
+    <li><a href="/docs/programming/lookupvalue.html">LookupValue</a></li>
+    <li><a href="/docs/programming/location.html">Location</a></li>
+    <li><a href="/docs/programming/observation.html">Observation</a></li>
+    <li><a href="/docs/programming/comment.html">Comment</a></li>
+    <li><a href="/docs/programming/media-file.html">MediaFile</a></li>
+    <li><a href="/docs/programming/data-grouping.html">Grouping</a></li>
+    <li><a href="/docs/programming/user.html">User</a></li>
 </ul>
