Updates OAuth tutorial

--- a/css/main.scss
+++ b/css/main.scss
@@ -742,6 +742,7 @@ ul.topics {
 }
 
 table {
+    margin-bottom: 15px;
     thead {
         border-bottom: 2px solid lighten($color-primary, 50%);
     }
