--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,38 +7,36 @@
         <meta name="viewport" content="width=device-width">
 
         <!-- Custom CSS -->
-        <link rel="stylesheet" href="/build/css/octicons/octicons.css">
-        <link rel="stylesheet" href="/build/css/bootstrap.min.css">
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="/build/css/global.css">
+        <link rel="stylesheet" href="/build/css/geokey.css">
         <script src="/build/js/nav.js"></script>
     </head>
     <body>
-        <div class="wrapper">
-        {{ content }}
+        <div id="wrapper">
+            {{ content }}
 
-        <footer>
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-3">
-                        Created in London <br>by <a href="http://www.ucl.ac.uk/excites">Extreme Citizen Science Research Group</a>.
-                    </div>
-                    <div class="col-sm-2">
-                        <ul>
-                            <li><a href="/blog/">Blog</a></li>
-                            <li><a href="/help/">Help</a></li>
-                            <li><a href="/docs/">API Docs</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-4">
-                        <ul>
-                            <li><a href="https://github.com/ExCiteS/geokey"><i class="fa fa-github fa-fw fa-2x"></i>View project on Github</a></li>
-                            <li><a href="https://twitter.com/geokey_project"><i class="fa fa-twitter fa-fw fa-2x"></i>Follow us on Twitter</a></li>
-                        </ul>
+            <footer>
+                <div class="container">
+                    <div class="row">
+                        <div>
+                            Created in London by <a href="http://www.ucl.ac.uk/excites">Extreme Citizen Science Research Group</a>.
+                        </div>
+                        <div>
+                            <ul>
+                                <li><a href="/blog/">Blog</a></li>
+                                <li><a href="/help/">Help</a></li>
+                                <li><a href="/docs/">API Docs</a></li>
+                            </ul>
+                        </div>
+                        <div>
+                            <ul>
+                                <li><a href="https://github.com/ExCiteS/geokey"><i class="fa fa-github fa-fw fa-2x"></i>View project on Github</a></li>
+                                <li><a href="https://twitter.com/geokey_project"><i class="fa fa-twitter fa-fw fa-2x"></i>Follow us on Twitter</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </footer>
+            </footer>
         </div>
     </body>
 
