--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -6,9 +6,7 @@ layout: default
     {% include nav.html %}
     <div class="container">
         <div class="row">
-            <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
-                <h1>{{ page.title }}</h1>
-            </div>
+            <h1>Blog</h1>
         </div>
     </div>
 </header>
