--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -6,8 +6,8 @@ layout: default
     {% include nav.html %}
     <div class="container">
         <div class="row">
-            <div class="col-sm-12 col-md-10 col-md-offset-1">
-                <h1>{{ page.title }}</h1>
+            <div>
+                <h1><span>Web API Docs</span> {{ page.title }}</h1>
             </div>
         </div>
     </div>
@@ -15,10 +15,8 @@ layout: default
 
 <section>
     <div class="container">
-        <article class="row tutorial">
-            <div class="col-sm-12 col-md-10 col-md-offset-1">
-                {{ content }}
-            </div>
+        <article>
+            {{ content }}
         </article>
     </div>
 </section>
