--- a/_layouts/internal-docs.html
+++ b/_layouts/internal-docs.html
@@ -6,22 +6,15 @@ layout: default
     {% include nav.html %}
     <div class="container">
         <div class="row">
-            <div class="col-sm-12">
-                <h1>{{ page.title }}</h1>
-            </div>
+            <h1><span>Programming API</span> {{ page.title }}</h1>
         </div>
     </div>
 </header>
 
 <section>
     <div class="container">
-        <article class="row tutorial">
-            <div class="col-sm-3">
-                {% include internal-nav.html %}
-            </div>
-            <div class="col-sm-9">
-                {{ content }}
-            </div>
+        <article>
+            {{ content }}
         </article>
     </div>
 </section>
