--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,9 +2,10 @@
 layout: blog
 ---
 
-<article class="row">
-    <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
-        {{ content }}
-        <p class="meta"><i class="fa fa-file-text"></i> Published on <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="published">{{ page.date | date_to_long_string }}</time> by {% if page.author_link %}<a href="{{ page.author_link }}">{% endif %}{{ page.author}}{% if page.author_link %}</a>{% endif %}</p>
-    </div>
+<article>
+    <h2>{{ page.title }}</h2>
+
+    <p class="meta"><i class="fa fa-clock-o"></i> <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="published">{{ page.date | date_to_long_string }}</time> &mdash; <i class="fa fa-user"></i> {% if page.author_link %}<a href="{{ page.author_link }}">{% endif %}{{ page.author}}{% if page.author_link %}</a>{% endif %}</p>
+
+    {{ content }}
 </article>
