--- a/_layouts/tutorial.html
+++ b/_layouts/tutorial.html
@@ -6,19 +6,15 @@ layout: default
     {% include nav.html %}
     <div class="container">
         <div class="row">
-            <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
-                <h1>{{ page.title }}</h1>
-            </div>
+            <h1><span>Help</span> {{ page.title }}</h1>
         </div>
     </div>
 </header>
 
 <section>
     <div class="container">
-        <article class="row tutorial">
-            <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
-                {{ content }}
-            </div>
+        <article class="row">
+            {{ content }}
         </article>
     </div>
 </section>
