--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,10 +29,8 @@
                             </ul>
                         </div>
                         <div>
-                            <ul>
-                                <li><a href="https://github.com/ExCiteS/geokey"><i class="fa fa-github fa-fw fa-2x"></i>View project on Github</a></li>
-                                <li><a href="https://twitter.com/geokey_project"><i class="fa fa-twitter fa-fw fa-2x"></i>Follow us on Twitter</a></li>
-                            </ul>
+                            <a href="https://github.com/ExCiteS/geokey"><i class="fa fa-github fa-fw fa-2x"></i></a>
+                            <a href="https://twitter.com/geokey_project"><i class="fa fa-twitter fa-fw fa-2x"></i></a>
                         </div>
                     </div>
                 </div>
