--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -59,7 +59,7 @@ $font-size-h2:            floor(($font-size-base * 1.7)) !default; // ~30px
 $font-size-h3:            ceil(($font-size-base * 1.3)) !default; // ~24px
 $font-size-h4:            $font-size-base !default; // ~18px
 $font-size-h5:            ceil(($font-size-base * 0.85)) !default; // ~15px
-$font-size-h6:            ceil(($font-size-base * 3)) !default; 
+$font-size-h6:            ceil(($font-size-base * 3)) !default;
 
 //** Unit-less `line-height` for use in components like buttons.
 $line-height-base:        1.428571429 !default; // 20/14
@@ -154,12 +154,12 @@ $table-border-color:            #ddd !default;
 $btn-font-weight:                normal !default;
 
 $btn-default-color:              $brand-primary !default;
-$btn-default-bg:                 transparent !default;
+$btn-default-bg:                 #fff !default;
 $btn-default-border:             darken($brand-primary, 5%) !default;
 
 $btn-primary-color:              #fff !default;
-$btn-primary-bg:                 $brand-primary !default;
-$btn-primary-border:             darken($btn-primary-bg, 5%) !default;
+$btn-primary-bg:                 $link-color !default;
+$btn-primary-border:             darken($link-color, 5%) !default;
 
 $btn-success-color:              #fff !default;
 $btn-success-bg:                 $brand-success !default;
