--- a/css/components/_docs.scss
+++ b/css/components/_docs.scss
@@ -1,3 +1,34 @@
+div#docs-nav {
+    @extend .col-md-3;
+
+    &.fixed {
+        position: fixed;
+        top: 50px;
+    }
+
+    h2 {
+        margin-top: 0;
+    }
+
+    ul {
+        @include list-unstyled;
+        font-size: $font-size-small;
+
+        a {
+            text-decoration: none;
+        }
+    }
+}
+
+div#docs-cnt {
+    @extend .col-md-9;
+
+    &.nav-fixed {
+        @extend .col-md-offset-3;
+    }
+}
+
+
 dl.parameters {
     font-size: 16px;
 
