--- a/css/components/_common.scss
+++ b/css/components/_common.scss
@@ -49,6 +49,11 @@ section {
             letter-spacing: 2px;
         }
     }
+
+    h3 {
+        text-transform: uppercase;
+        letter-spacing: 3px;
+    }
 }
 
 a:link {
