--- a/css/components/_common.scss
+++ b/css/components/_common.scss
@@ -3,6 +3,10 @@ div#wrapper {
     position:relative;
 }
 
+h2:first-child, h3:first-child, h4:first-child, h5:first-child, h6:first-child {
+    margin-top: 0;
+}
+
 section {
     @include stripes();
     padding-top: $padding-xxl-vertical;
