--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -19,8 +19,8 @@ layout: default
             <div id="docs-nav">
                 <h2><span>Navigate</span></h2>
                 <ul>
-                    <li><a href="#request">Request</a></li>
-                    <li><a href="#response">Response</a></li>
+                    <!-- <li><a href="#request">Request</a></li>
+                    <li><a href="#response">Response</a></li> -->
                 </ul>
             </div>
             <div id="docs-cnt">
@@ -30,18 +30,4 @@ layout: default
     </div>
 </section>
 
-<script>
-    var headerHeight = document.getElementsByTagName('header')[0]. offsetHeight;
-    var nav = document.getElementById('docs-nav');
-    var cnt = document.getElementById('docs-cnt');
-
-    window.onscroll = function () {
-        if (window.scrollY > headerHeight) {
-            nav.classList.add('fixed');
-            cnt.classList.add('nav-fixed');
-        } else {
-            nav.classList.remove('fixed');
-            cnt.classList.remove('nav-fixed');
-        }
-    }
-</script>
+<script src="/build/js/toc.js"></script>
