--- a/_layouts/internal-docs.html
+++ b/_layouts/internal-docs.html
@@ -16,12 +16,7 @@ layout: default
         <div class="row">
             <div id="docs-nav">
                 <h2><span>Navigate</span></h2>
-                <ul>
-                    <li><a href="#attributes">Attributes</a></li>
-                    <li><a href="#methods">Methods</a></li>
-                    <li><a href="#creating-a-model-instance">Creating model a instance</a></li>
-                    <li><a href="#accessing-model-instances">Accessing model instances</a></li>
-                </ul>
+                <ul></ul>
             </div>
             <div id="docs-cnt">
                 {{ content }}
@@ -30,18 +25,4 @@ layout: default
     </div>
 </section>
 
-<script>
-    var headerHeight = document.getElementsByTagName('header')[0]. offsetHeight;
-    var nav = document.getElementById('docs-nav');
-    var cnt = document.getElementById('docs-cnt');
-
-    window.onscroll = function () {
-        if (window.scrollY > headerHeight) {
-            nav.classList.add('fixed');
-            cnt.classList.add('nav-fixed');
-        } else {
-            nav.classList.remove('fixed');
-            cnt.classList.remove('nav-fixed');
-        }
-    }
-</script>
+<script src="/build/js/toc.js"></script>
