--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -16,10 +16,10 @@ $gray-light:             lighten($gray-base, 46.7%) !default; // #777
 $gray-lighter:           lighten($gray-base, 93.5%) !default; // #eee
 
 $brand-primary:         #22313F !default; // #337ab7
-$brand-success:         #5cb85c !default;
-$brand-info:            #5bc0de !default;
-$brand-warning:         #f0ad4e !default;
-$brand-danger:          #d9534f !default;
+$brand-success:         #1E824C !default;
+$brand-info:            #C5EFF7 !default;
+$brand-warning:         #F7CA18 !default;
+$brand-danger:          #CF000F !default;
 
 
 //== Scaffolding
