--- a/css/geokey.scss
+++ b/css/geokey.scss
@@ -11,7 +11,6 @@
 @import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/button-groups";
 @import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/tables";
 
-
 @import "components/common";
 @import "components/header";
 @import "components/footer";
@@ -19,3 +18,4 @@
 @import "components/home";
 @import "components/blog";
 @import "components/docs";
+@import "components/communities";
