--- a/css/components/_common.scss
+++ b/css/components/_common.scss
@@ -85,6 +85,10 @@ button {
     text-decoration: none;
 }
 
+ul, ol {
+    padding-left: 0;
+}
+
 img {
     border: 1px solid $gray-lighter;
     @include border-right-radius($border-radius-base);
