--- a/css/components/_common.scss
+++ b/css/components/_common.scss
@@ -27,6 +27,10 @@ section {
             @extend .col-sm-offset-1;
         }
 
+        & ul > li > ul {
+            padding-left: 1em;
+        }
+
         img {
             max-width: 100%;
         }
