--- a/css/components/_communities.scss
+++ b/css/components/_communities.scss
@@ -17,24 +17,11 @@ section#use-data {
 
             &:last-child {
                 margin-bottom: 0;
+                border-bottom: 0;
             }
 
             p {
                 text-align: left !important;
-            }
-
-            &#export {
-                h3, p, ul {
-                    @extend .col-sm-6;
-                    @extend .col-sm-offset-6;
-                }
-            }
-
-            &#import {
-                h3, p, ul {
-                    @extend .col-sm-7;
-                    @extend .col-sm-offset-0;
-                }
             }
 
             &#community-maps {
@@ -78,10 +65,30 @@ section#use-data {
             }
 
             &#your-app {
-                h3, p, ul {
-                    @extend .col-sm-5;
-                    @extend .col-sm-offset-7;
+                h3, p {
+                    @extend .col-sm-8;
+                    @extend .col-sm-offset-2;
+                    text-align: center !important;
                 }
+
+                ul {
+                    @extend .col-sm-4;
+                    @extend .col-sm-offset-4;
+                }
+            }
+        }
+
+        div#export,
+        div#import {
+            margin-top: $padding-xxl-vertical * 2;
+            @extend .col-sm-6;
+
+            p {
+                text-align: left;
+            }
+
+            ul {
+                padding-left: 1em;
             }
         }
     }
