--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
                 <div class="container">
                     <div class="row">
                         <div>
-                            Created in London by <a href="http://www.ucl.ac.uk/excites">Extreme Citizen Science Research Group</a>.
+                            Created in London by <a href="http://www.ucl.ac.uk/excites">Extreme Citizen Science</a> research group.
                         </div>
                         <div>
                             <ul>
